syntax = "proto3";

package users;

option go_package = "github.com/vgs/api/users/v1";
import "google/api/annotations.proto";

service Userervice {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get : "/v1/user/{user_id=*}"
    };
  }
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get : "/v1/users"
    };
  }
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post : "/v1/users"
      body : "*"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      patch : "/v1/users/{user_id=*}"
      body : "*"
    };
  }
  rpc DisableUser(DisableUserRequest) returns (DisableUserResponse) {
    option (google.api.http) = {
      patch : "/v1/users/{user_id=*}:disable"
      body : "*"
    };
  }
}

message GetUserRequest { string user_id = 1; }

message GetUserResponse { repeated User user = 1; }

message ListUsersRequest {
  // Optional filters, pagination, etc. can be added later
}

message ListUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse { User user = 1; }

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserResponse { User user = 1; }

message DisableUserRequest { string user_id = 1; }

message DisableUserResponse { User user = 1; }

// Admin will exist in AWS cognito. Not in application code
enum UserRoles {
  Basic = 0;
  Enhanced = 1;
}

message User {
  string id = 1;
  string cognito_id = 2;
  string username = 3;
  UserRoles role = 4;
}